# streamlit_fabric

./: main.py  pyproject.toml
