[tool.poetry]
name = "streamlit-fabric"
version = "0.1.0"
description = ""
authors = ["mwilsch <marius.santiago.wilsch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
st-supabase-connection = "^2.0.0"
anthropic = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
